--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,14 @@ body {
 .animatedButton {
   animation-duration: 10s;
 }
+
+.ql-container {
+  border: none !important;
+}
+
+.ql-toolbar {
+  border: none !important;
+}
+.ql-editor {
+  border: none !important;
+}
